--- a/custom/my-react-router-app/package.json
+++ b/custom/my-react-router-app/package.json
@@ -12,6 +12,8 @@
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
     "isbot": "^5.1.17",
+    "querystring": "^0.2.1",
+    "randomstring": "^1.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.1"
