--- a/custom/manually-duplicate/package.json
+++ b/custom/manually-duplicate/package.json
@@ -12,9 +12,11 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "isbot": "^5.1.27",
+    "randomstring": "^1.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
